SyntaxAnalyzer.py
# Used to exit program gracefully 
import time
import sys

# define separators, operators and reserved words
separator = [' ', '\t', ',', ';', '(', ')', '{', '}', '#']
operators = ['+', '-', '*', '/', '=', '<', '>', '<=', '=>', '==', '!=', '!']
keyword = ['if', 'else', 'endif' ,'while', 'function', 'integer', 'bool', 'real', 'ret', 'put', 'get', 'true', 'false']
begin_comment = '[*'
end_comment = '*]'

# define array to store all the words that have been read
words = []

# define dictionary to store tokens
tokens = []

# define current line
current_line = 1

# variables for parser
current_token = None
token_index = 0

# variables for output file
output_file = None

switch = False

# *********************************************************************************************************************************
# ******************************SYNTAX ANALYZER CODE STARTS HERE*******************************************************************
# *********************************************************************************************************************************
"""All the rules and functions for the syntax analyzer are here for top down parsing"""
def exit_syntax_analyzer():
    print("\nExiting Syntax Analyzer...")
    time.sleep(2)
    print("\nSyntax Analyzer Exited.")
    sys.exit(1)

def change_switch():
    global switch
    if switch == False:
        switch = True
    else:
        switch = False

def get_next_token():
    global current_token, token_index
    if token_index < len(tokens):
        current_token = tokens[token_index]
        token_index += 1
    else:
        print("\nReached end of file without parsing errors.\n")
        with open(output_file, "a") as file:
            file.write("\nReached end of file without parsing errors.\n\n")
        change_switch()
        # exit_syntax_analyzer()
    

def print_token():
    global current_token,  output_file, switch
    if switch == False:
        if current_token['token'] == 'illegal' or current_token['token'] == 'keyword' or current_token['token'] == 'integer' or current_token['token'] == 'real' or current_token['token'] == 'operator':
            print(f"Token: {current_token['token']}\t\t\tLexeme: {current_token['lexeme']}")
            with open(output_file, "a") as file:
                file.write(f"Token: {current_token['token']}\t\t\tLexeme: {current_token['lexeme']}\n")
        else:
            print(f"Token: {current_token['token']}\t\tLexeme: {current_token['lexeme']}")
            with open(output_file, "a") as file:
                file.write(f"Token: {current_token['token']}\t\tLexeme: {current_token['lexeme']}\n")

# Rule 1
# R1) <Rat23F> ::= # <Opt Declaration List> <Statement List> #
def Rat23F():
    global current_token, switch, output_file
    get_next_token()
    print_token()
    # print rule
    if switch == False:
        print("\t<Rat23F> ::= # <Opt Declaration List> <Statement List> #")
        with open(output_file, "a") as file:
            file.write("\t<Rat23F> ::=  # <Opt Declaration List> <Statement List> #\n")
    if current_token['lexeme'] == '#':
        get_next_token()
        print_token()
        OptDeclarationList()
        StatementList()
        if current_token['lexeme'] == '#':
            get_next_token()
            print_token()
        else:
            print(f"Error: Expected '#' at line {current_token['line']}.")
            print(f"Reading token:", end="")
            with open(output_file, "a") as file:
                file.write(f"Error: Expected '#' at line {current_token['line']}.\n")
                file.write(f"Reading token:")
                print_token()
            exit_syntax_analyzer()
    else: 
        
        print(f"Error: Expected '#' at line {current_token['line']}.")
        print(f"Reading token:", end="")
        with open(output_file, "a") as file:
            file.write(f"Error: Expected '#' at line {current_token['line']}.\n")
            file.write(f"Reading token:")
        print_token()
        exit_syntax_analyzer()

# # Rule 2
# # R2) <Opt Function Definitions> ::= <Function Definitions> | <Empty>
# def OptFunctionDefinitions():
#     global current_token, switch, output_file
#     if switch == False:
#         print("\t<Opt Function Definitions> ::= <Function Definitions> | <Empty>")
#         with open(output_file, "a") as file:
#             file.write("\t<Opt Function Definitions> ::= <Function Definitions> | <Empty>\n")
#     if current_token['lexeme'] == 'function':
#         FunctionDefinitions()
#     if current_token['lexeme'] == '#':
#         if switch == False:
#             print("\t<Opt Function Definitions> ::= <Function Definitions> | <Empty>")
#             with open(output_file, "a") as file:
#                 file.write("\t<Opt Function Definitions> ::= <Function Definitions> | <Empty>\n")
#         Empty()
#     else:
#         print(f"Error: Expected 'function' or '#' at line {current_token['line']}.")
#         print(f"Reading token:", end="")
#         with open(output_file, "a") as file:
#             file.write(f"Error: Expected 'function' or '#' at line {current_token['line']}.\n")
#             file.write(f"Reading token:")
#         print_token()
#         exit_syntax_analyzer()


# # Rule 3
# # R3) <Function Definitions> ::= <Function> <Function Definitions Prime>
# def FunctionDefinitions():
#     global current_token, switch, output_file
#     if switch == False:
#         print("\t<Function Definitions> ::= <Function> <Function Definitions Prime>")
#         with open(output_file, "a") as file:
#             file.write("\t<Function Definitions> ::= <Function> <Function Definitions Prime>\n")
#     Function()
#     FunctionDefinitionsPrime()


# # Rule 4
# # R4) <Function Definitions Prime> ::= <Empty> | <Function Definitions>
# def FunctionDefinitionsPrime():
#     global current_token, switch, output_file
#     if switch == False:
#         print("\t<Function Definitions Prime> ::= <Empty> | <Function Definitions>")
#         with open(output_file, "a") as file:
#             file.write("\t<Function Definitions Prime> ::= <Empty> | <Function Definitions>\n")
#     if current_token['lexeme'] == 'function':
#         FunctionDefinitions()
#     else:
#         Empty()

# #Rule 5
# # R5) <Function> ::= function <Identifier> ( <Opt Parameter List> ) <Opt Declaration List> <Body>
# def Function():
#     global current_token, switch, output_file
#     if switch == False:
#         print("\t<Function> ::= function <Identifier> ( <Opt Parameter List> ) <Opt Declaration List> <Body>")
#         with open(output_file, "a") as file:
#             file.write("\t<Function> ::= function <Identifier> ( <Opt Parameter List> ) <Opt Declaration List> <Body>\n")
#     if current_token['lexeme'] == 'function':
#         get_next_token()
#         print_token()
#         if current_token['token'] == 'identifier':
#             get_next_token()
#             print_token()
#             if current_token['lexeme'] == '(':
#                 get_next_token()
#                 print_token()
#                 if current_token['lexeme'] != ')':
#                     OptParameterList()
#                 else:
#                     Empty()
#                 if current_token['lexeme'] == ')':
#                     get_next_token()
#                     print_token()
#                     if current_token['lexeme'] != '{':
#                         OptDeclarationList()
#                     else:
#                         Empty()
#                     Body()
#                 else:
                    
#                     print(f"Error: Expected ')' at line {current_token['line']}.")
#                     print(f"Reading token:", end="")
#                     with open(output_file, "a") as file:
#                         file.write(f"Error: Expected ')' at line {current_token['line']}.\n")
#                         file.write(f"Reading token:")
#                         print_token()
#                     exit_syntax_analyzer()
#             else:
                
#                 print(f"Error: Expected '(' at line {current_token['line']}.")
#                 print(f"Reading token:", end="")
#                 with open(output_file, "a") as file:
#                     file.write(f"Error: Expected '(' at line {current_token['line']}.\n")
#                     file.write(f"Reading token:")
#                     print_token()
#                 exit_syntax_analyzer()
#         else:
            
#             print(f"Error: Expected 'identifier' at line {current_token['line']}.")
#             print(f"Reading token:", end="")
#             with open(output_file, "a") as file:
#                 file.write(f"Error: Expected 'identifier' at line {current_token['line']}.\n")
#                 file.write(f"Reading token:")
#                 print_token()
#             exit_syntax_analyzer()
#     else:
        
#         print(f"Error: Expected 'function' keyword at line {current_token['line']}.")
#         print(f"Reading token:", end="")
#         with open(output_file, "a") as file:
#             file.write(f"Error: Expected 'function' keyword at line {current_token['line']}.\n")
#             file.write(f"Reading token:")
#         print_token()
#         exit_syntax_analyzer()


# # Rule 6
# # R6) <Opt Parameter List> ::= <Parameter List> | <Empty>
# def OptParameterList():
#     global current_token, switch, output_file
#     if switch == False:
#         print("\t<Opt Parameter List> ::= <Parameter List> | <Empty>")
#         with open(output_file, "a") as file:
#             file.write("\t<Opt Parameter List> ::= <Parameter List> | <Empty>\n")
#     ParameterList()


# # Rule 7
# # R7) <Parameter List> ::= <Parameter> <Parameter List Prime>
# def ParameterList():
#     global current_token, switch, output_file
#     if switch == False:
#         print("\t<Parameter List> ::= <Parameter> <Parameter List Prime>")
#         with open(output_file, "a") as file:
#             file.write("\t<Parameter List> ::= <Parameter> <Parameter List Prime>\n")
#     Parameter()
#     ParameterListPrime()


# # Rule 8
# # R8) <Parameter List Prime> ::= <Empty> | <Parameter List>
# def ParameterListPrime():
#     global current_token, switch, output_file
#     if switch == False:
#         print("\t<Parameter List Prime> ::= <Empty> | <Parameter List>")
#         with open(output_file, "a") as file:
#             file.write("\t<Parameter List Prime> ::= <Empty> | <Parameter List>\n")
#     if current_token['lexeme'] == ',':
#         get_next_token()
#         print_token()
#         ParameterList()
#     else:
#         Empty()


# # Rule 9
# # R9) <Parameter> ::= <IDs> <Qualifier>
# def Parameter():
#     global current_token, switch, output_file
#     if switch == False:
#         print("\t<Parameter> ::= <IDs> <Qualifier>")
#         with open(output_file, "a") as file:
#             file.write("\t<Parameter> ::= <IDs> <Qualifier>\n")
    
#     IDs()
#     Qualifier()


# Rule 10
# R10) <Qualifier> ::= integer | bool | real
def Qualifier():
    global current_token, switch, output_file
    # get_next_token()
    # print_token()
    if switch == False:
        print("\t<Qualifier> ::= integer | bool | real")
        with open(output_file, "a") as file:
            file.write("\t<Qualifier> ::= integer | boolean | real\n")
    if current_token['lexeme'] == 'integer':
        get_next_token()
        print_token()
    elif current_token['lexeme'] == 'bool':
        get_next_token()
        print_token()
    elif current_token['lexeme'] == 'real':
        get_next_token()
        print_token()
    else:
        
        print(f"Error: Expected 'integer', 'bool' or 'real' at line {current_token['line']}.")
        print(f"Reading token:", end="")
        with open(output_file, "a") as file:
            file.write(f"Error: Expected 'integer', 'bool' or 'real' at line {current_token['line']}.\n")
            file.write(f"Reading token:")
        print_token()
        exit_syntax_analyzer()


# Rule 11
# R11) <Body> ::= { <Statement List> }
# def Body():
#     global current_token, switch, output_file
#     if switch == False:
#         print("\t<Body> ::= { <Statement List> }")
#         with open(output_file, "a") as file:
#             file.write("\t<Body> ::= { <Statement List> }\n")
#     if current_token['lexeme'] == '{':
#         get_next_token()
#         print_token()

#         StatementList()
#         if current_token['lexeme'] == '}':
#             get_next_token()
#             print_token()
#         else:
            
#             print(f"Error: Expected '}}' at line {current_token['line']}.")
#             print(f"Reading token:", end="")
#             with open(output_file, "a") as file:
#                 file.write(f"Error: Expected '}}' at line {current_token['line']}.\n")
#                 file.write(f"Reading token:")
#                 print_token()
#             exit_syntax_analyzer()
#     else:
        
#         print(f"Error: Expected '{{' at line {current_token['line']}.")
#         print(f"Reading token:", end="")
#         with open(output_file, "a") as file:
#             file.write(f"Error: Expected '{{' at line {current_token['line']}.\n")
#             file.write(f"Reading token:")
#         print_token()
#         exit_syntax_analyzer()


# Rule 12
# R12) <Opt Declaration List> ::= <Declaration List> | <Empty>
def OptDeclarationList():
    global current_token, switch, output_file
    if switch == False:
        print("\t<Opt Declaration List> ::= <Declaration List> | <Empty>")
        with open(output_file, "a") as file:
            file.write("\t<Opt Declaration List> ::= <Declaration List> | <Empty>\n")
    DeclarationList()
    Empty()


# Rule 13
# R13) <Declaration List> ::= <Declaration> ; <Declaration List Prime>
def DeclarationList():
    global current_token, switch, output_file
    if switch == False:
        print("\t<Declaration List> ::= <Declaration> ; <Declaration List Prime>")
        with open(output_file, "a") as file:
            file.write("\t<Declaration List> ::= <Declaration> ; <Declaration List Prime>\n")
    Declaration()
    if current_token['lexeme'] == ';':
        get_next_token()
        print_token()
        DeclarationListPrime()
    else:
        
        print(f"Error: Expected ';' at line {current_token['line']}.")
        print(f"Reading token:", end="")
        with open(output_file, "a") as file:
            file.write(f"Error: Expected ';' at line {current_token['line']}.\n")
            file.write(f"Reading token:")
        print_token()
        exit_syntax_analyzer()


# Rule 14
# R14) <Declaration List Prime> ::= <Declaration List> | <Empty>
def DeclarationListPrime():
    global current_token, switch, output_file
    if switch == False:
        print("\t<Declaration List Prime> ::= <Declaration List> | <Empty>")
        with open(output_file, "a") as file:
            file.write("\t<Declaration List Prime> ::= <Declaration List> | <Empty>\n")
    if current_token['lexeme'] == 'integer' or current_token['lexeme'] == 'bool' or current_token['lexeme'] == 'real':
        DeclarationList()
    else:
        Empty()


# Rule 15
# R15) <Declaration> ::= <Qualifier> <IDs>
def Declaration():
    global current_token, switch, output_file
    if switch == False:
        print("\t<Declaration> ::= <Qualifier> <IDs>")
        with open(output_file, "a") as file:
            file.write("\t<Declaration> ::= <Qualifier> <IDs>\n")
    if current_token['lexeme'] == '{':
        get_next_token()
        print_token()
    Qualifier()
    IDs()


# Rule 16
# R16) <IDs> ::= <Identifier> <IDs Prime>
def IDs():
    global current_token, switch, output_file
    if switch == False:
        print("\t<IDs> ::= <Identifier> <IDs Prime>")
        with open(output_file, "a") as file:
            file.write("\t<IDs> ::= <Identifier> <IDs Prime>\n")
    if current_token['token'] == 'identifier':
        get_next_token()
        print_token()
        IDsPrime()
    else:
        
        print(f"Error: Expected 'identifier' at line {current_token['line']}.")
        print(f"Reading token:", end="")
        with open(output_file, "a") as file:
            file.write(f"Error: Expected 'identifier' at line {current_token['line']}.\n")
            file.write(f"Reading token:")
        print_token()
        exit_syntax_analyzer()


# Rule 17
# R17) <IDs Prime> ::= , <IDs> | <Empty>
def IDsPrime():
    global current_token, switch, output_file
    if switch == False:
        print("\t<IDs Prime> ::= , <IDs> | <Empty>")
        with open(output_file, "a") as file:
            file.write("\t<IDs Prime> ::= , <IDs> | <Empty>\n")
    if current_token['lexeme'] == ',':
        get_next_token()
        print_token()
        IDs()
    else:
        Empty()


# Rule 18
# R18) <Statement List> ::= <Statement> <Statement List Prime>
def StatementList():
    global current_token, switch, output_file
    if switch == False:
        print("\t<Statement List> ::= <Statement> <Statement List Prime>")
        with open(output_file, "a") as file:
            file.write("\t<Statement List> ::= <Statement> <Statement List Prime>\n")
    Statement()
    if current_token['lexeme'] != '#':  #TODO: MIGHT NEED TO CHANGE THIS
        StatementListPrime()
    


# Rule 19
# R19) <Statement List Prime> ::= <Statement List> | <Empty>
def StatementListPrime():
    global current_token, switch, output_file
    if switch == False:
        print("\t<Statement List Prime> ::= <Statement List> | <Empty>")
        with open(output_file, "a") as file:
            file.write("\t<Statement List Prime> ::= <Statement List> | <Empty>\n")
    if current_token['lexeme'] != '}':
        StatementList()
    else:
        Empty()


# Rule 20
# R20) <Statement> ::= <Compound> | <Assign> | <If> | <Return> | <Print> | <Scan> | <While>
def Statement():
    global current_token, switch, output_file
    if switch == False:
        print("\t<Statement> ::= <Compound> | <Assign> | <If> | <Return> | <Print> | <Scan> | <While>")
        with open(output_file, "a") as file:
            file.write("\t<Statement> ::= <Compound> | <Assign> | <If> | <Return> | <Print> | <Scan> | <While>\n")
    if current_token['lexeme'] == 'if':
        If()
    elif current_token['lexeme'] == 'while':
        While()
    elif current_token['lexeme'] == 'put':
        Print_put()
    elif current_token['lexeme'] == 'get':
        Scan()
    elif current_token['lexeme'] == 'ret':
        Return()
    elif current_token['token'] == 'identifier':
        Assign()
    elif current_token['lexeme'] == '{':
        Compound()
    else:
        
        print(f"Error: Expected 'if', 'while', 'put', 'get', 'ret', 'identifier' or '{{' at line {current_token['line']}.")
        print(f"Reading token:", end="")
        with open(output_file, "a") as file:
            file.write(f"Error: Expected 'if', 'while', 'put', 'get', 'ret', 'identifier' or '{{' at line {current_token['line']}.\n")
            file.write(f"Reading token:")
        print_token()
        exit_syntax_analyzer()


# Rule 21
# R21) <Compound> ::= { <Statement List> }
def Compound():
    global current_token, switch, output_file
    if switch == False:
        print("\t<Compound> ::= { <Statement List> }")
        with open(output_file, "a") as file:
            file.write("\t<Compound> ::= { <Statement List> }\n")
    if current_token['lexeme'] == '{':
        get_next_token()
        print_token()
        StatementList()
        if current_token['lexeme'] == '}':
            get_next_token()
            print_token()
        else:
            
            print(f"Error: Expected '}}' at line {current_token['line']}.")
            print(f"Reading token:", end="")
            with open(output_file, "a") as file:
                file.write(f"Error: Expected '}}' at line {current_token['line']}.\n")
                file.write(f"Reading token:")
                print_token()
            exit_syntax_analyzer()
    else:
        
        print(f"Error: Expected '{{' at line {current_token['line']}.")
        print(f"Reading token:", end="")
        with open(output_file, "a") as file:
            file.write(f"Error: Expected '{{' at line {current_token['line']}.\n")
            file.write(f"Reading token:")
        print_token()
        exit_syntax_analyzer()


# Rule 22
# R22) <Assign> ::= <Identifier> = <Expression> ;
def Assign():
    global current_token, switch, output_file
    if switch == False:
        print("\t<Assign> ::= <Identifier> = <Expression> ;")
        with open(output_file, "a") as file:
            file.write("\t<Assign> ::= <Identifier> = <Expression> ;\n")
    if current_token['token'] == 'identifier':
        get_next_token()
        print_token()
        if current_token['lexeme'] == '=':
            get_next_token()
            print_token()
            Expression()
            if current_token['lexeme'] == ';':
                get_next_token()
                print_token()
            else:
                
                print(f"Error: Expected ';' at line {current_token['line']}.")
                print(f"Reading token:", end="")
                with open(output_file, "a") as file:
                    file.write(f"Error: Expected ';' at line {current_token['line']}.\n")
                    file.write(f"Reading token:")
                    print_token()
                exit_syntax_analyzer()
        else:
            
            print(f"Error: Expected '=' at line {current_token['line']}.")
            print(f"Reading token:", end="")
            with open(output_file, "a") as file:
                file.write(f"Error: Expected '=' at line {current_token['line']}.\n")
                file.write(f"Reading token:")
                print_token()
            exit_syntax_analyzer()
    else:
        
        print(f"Error: Expected 'identifier' at line {current_token['line']}.")
        print(f"Reading token:", end="")
        with open(output_file, "a") as file:
            file.write(f"Error: Expected 'identifier' at line {current_token['line']}.\n")
            file.write(f"Reading token:")
        print_token()
        exit_syntax_analyzer()


# Rule 23
# R23) <If> ::= if ( <Condition> ) <Statement> <If Prime>
def If():
    global current_token, switch, output_file
    if switch == False:
        print("\t<If> ::= if ( <Condition> ) <Statement> <If Prime>")
        with open(output_file, "a") as file:
            file.write("\t<If> ::= if ( <Condition> ) <Statement> <If Prime>\n")
    if current_token['lexeme'] == 'if':
        get_next_token()
        print_token()
        if current_token['lexeme'] == '(':
            get_next_token()
            print_token()
            Condition()
            if current_token['lexeme'] == ')':
                get_next_token()
                print_token()
                Statement()

                IfPrime()
            else:
                
                print(f"Error: Expected ')' at line {current_token['line']}.")
                print(f"Reading token:", end="")
                with open(output_file, "a") as file:
                    file.write(f"Error: Expected ')' at line {current_token['line']}.\n")
                    file.write(f"Reading token:")
                    print_token()
                exit_syntax_analyzer()
        else:
            
            print(f"Error: Expected '(' at line {current_token['line']}.")
            print(f"Reading token:", end="")
            with open(output_file, "a") as file:
                file.write(f"Error: Expected '(' at line {current_token['line']}.\n")
                file.write(f"Reading token:")
                print_token()
            exit_syntax_analyzer()
    else:
        
        print(f"Error: Expected 'if' keyword at line {current_token['line']}.")
        print(f"Reading token:", end="")
        with open(output_file, "a") as file:
            file.write(f"Error: Expected 'if' keyword at line {current_token['line']}.\n")
            file.write(f"Reading token:")
        print_token()
        exit_syntax_analyzer()
